[project]
name = "langchain-ucp"
version = "0.2.0"
description = "LangChain toolkit for Universal Commerce Protocol (UCP)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Muzaffer Şenkal", email = "mzffersenkal@gmail.com" }
]
keywords = ["langchain", "ucp", "commerce", "checkout", "ai", "agents", "a2ui", "ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "ucp-sdk",
]

[project.optional-dependencies]
a2ui = [
    "jsonschema>=4.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.14.0",
    "jsonschema>=4.0.0",
]
all = [
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_ucp"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
